--- a/index.html
+++ b/index.html
@@ -1,132 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nyewa - Cari Sewa Kost & Kontrakan via Online</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>EKOS</title>
+	<!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+<h1>EKOST</h1>
 </head>
 <body>
-    <!-- Header -->
-    <div class="header border-bottom-1 border border-primary">
-        <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
-            <div class="container-fluid">
-              <img src="./img/logo.png" alt="" style="width: 100px; height: 100px;">
-              <a class="navbar-brand fw-bold" href="#" style="color: #4e5aa8;" >NYEWA</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Bantuan</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Ketentuan</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Cari Iklan
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Kos</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Kontrakan</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <button class="btn btn-outline-primary" type="submit" style="margin-right: 10px;">LOGIN</button>
-                <button class="btn btn-outline-primary" type="submit">REGISTER</button>
-              </div>
-            </div>
-          </nav>
+	<div>
+		<!--navbar-->
+	<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Active</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="form.php">Pesan</a>
+  </li>
+  
+</ul>
+</div>
+<!--produk-->
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+    	<img src="img/kamar1.jfif" class="img-thumbnail" alt="...">
+    	<h1>Rp120.000/Bulan</h1>
+    	1
     </div>
-    <!-- Content -->
-    <div class="content m-5 container" >
-      <div class="row">
-        <div class="col">
-        <img src="./img/1.jpg" alt="" style="width: 300px; height: 300px;" class="mx-5"> 
-        <h2>Mau Cari Kos atau Kontrakan ?</h2>
-        <h4>Dapatkan informasi lebih lanjut di NYEWA</h4>
-        <a class="btn btn-primary" href="#" role="button">Detail Kos</a>
-        <a class="btn btn-primary" href="#" role="button">Detail Kontrakan</a>
-        </div>
-      </div>   
+    <div class="col">
+    	<img src="img/kamar2.jfif" class="img-thumbnail" alt="...">
+    	<h1>Rp120.000/Bulan</h1>
+    	2
     </div>
-    <!-- Iklan Kos -->
-    <div style="background-color: #4e5aa8; color: white;" class="p-5">
-      <h4>Kos Terpopuler</h4><hr width="200px">
-      <li class="nav-item dropdown" style="list-style: none;">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Silahkan Pilih Daerah
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="#">Purbalingga</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Banyumas</a></li>
-        </ul>
-      </li><br>
-      <div class="card" style="width: 18rem;">
-        <img src="./img/kos1.jpg" class="card-img-top" sizes="10">
-        <div class="card-body" style="color: black;">
-          <h5 class="card-title">Kos Campuran</h5>
-          <p class="card-text" >Perumahan Bumi Padamara Baru, Padamara, Purbalingga</p>
-          <a href="#" class="btn btn-primary">Detail Informasi</a>
-        </div>
-      </div><br>
-      <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-outline-light" class="text-center">Daftarkan Kos Anda Segera </button>
-      </div>  
-      </div>
-    <!-- Iklan Kontrakan -->
-    <div class="p-5">
-      <h4>Kontrakan Terpopuler</h4><hr width="200px">
-      <li class="nav-item dropdown" style="list-style: none;">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Silahkan Pilih Daerah
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item" href="#">Purbalingga</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Banyumas</a></li>
-        </ul>
-      </li><br>
-      <div class="card" style="width: 18rem;">
-        <img src="./img/kos1.jpg" class="card-img-top" sizes="10">
-        <div class="card-body" style="color: black;">
-          <h5 class="card-title">Kontrakan Minimalis</h5>
-          <p class="card-text" >Perumahan Bumi Padamara Baru, Padamara, Purbalingga</p>
-          <a href="#" class="btn btn-primary">Detail Informasi</a>
-        </div>
-      </div>
-      <div class="d-flex justify-content-center">
-        <button type="button" class="btn btn-outline-primary" class="text-center">Daftarkan Kontrakan Anda Segera </button>
-      </div>  
+    <div class="col">
+    	<img src="img/kamar3.jfif" class="img-thumbnail" alt="...">
+    	<h1>Rp120.000/Bulan</h1>
+    	3
     </div>
-    <!-- Footer -->
-    <div style="background-color: #e3f2fd;" >
-      <div class="footer container" >
-        <div class="row">
-          <div class="col">
-            <div class="d-flex align-self-center align-items-center">
-              <img src="./img/logo.png" alt="" style="width: 100px; height: 100px;">
-              <a class="navbar-brand fw-bold" href="#" style="color: #4e5aa8; font-size: 40px;" >NYEWA</a>
-            </div>
-            <p>Cari Kos dan Kontrakan dengan mudah,cepat dan murah</p>
-          </div>
-          <div class="col m-4">
-            <h4>Hubungi Kami</h4>
-            <p><i class="bi bi-envelope"></i> muhammadfarrelpradipta@gmail.com</p>
-            <p><i class="bi bi-telephone-fill"></i> 089619103122</p>
-          </div>
-        </div>
-      </div>
+    <div class="col">
+    	<img src="img/kamar4.jfif" class="img-thumbnail" alt="...">
+    	<h1>Rp120.000/Bulan</h1>
+    	4
     </div>
+  </div>
+</div>
+
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
+
